tests/errors/pp-merge-nonhexdigits.h
#define EXPANDME1 0x ## G
enum E {
	A = EXPANDME1
};
